[gd_scene load_steps=41 format=3 uid="uid://dn5deabsaiubp"]

[ext_resource type="Script" path="res://addons/closed_captions/caption_panel.gd" id="1_euj1v"]
[ext_resource type="Theme" uid="uid://dg5xg7e6qqlgq" path="res://addons/closed_captions/captions.theme" id="1_rptbq"]
[ext_resource type="Script" path="res://addons/closed_captions/caption_label.gd" id="2_7ifoh"]
[ext_resource type="AudioStream" uid="uid://ch6dxwlabitpf" path="res://demo/Phasmophobia_No_Evidence.wav" id="2_aot4b"]
[ext_resource type="Script" path="res://addons/closed_captions/caption.gd" id="3_wdwpm"]
[ext_resource type="Script" path="res://addons/closed_captions/multi_caption_audio_stream.gd" id="4_uskjc"]
[ext_resource type="Script" path="res://addons/closed_captions/caption_panel_timeline.gd" id="5_re1ab"]

[sub_resource type="Resource" id="Resource_wa64w"]
script = ExtResource("3_wdwpm")
text = "clicking"
position = 2
speaker_name = ""
speaker_color = 0
speaker_format = 0
extra_formatting = ""
delay = 0.0
duration = 2.0

[sub_resource type="Resource" id="Resource_5fdjd"]
script = ExtResource("3_wdwpm")
text = "Boy, do I love light switches."
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 0.5
duration = 0.0

[sub_resource type="Resource" id="Resource_lndpt"]
script = ExtResource("3_wdwpm")
text = "Love turning them on and off so much fun."
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 2.0
duration = 0.0

[sub_resource type="Resource" id="Resource_1g0h8"]
script = ExtResource("3_wdwpm")
text = "I love turning on lights"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 4.0
duration = 0.0

[sub_resource type="Resource" id="Resource_4bnx5"]
script = ExtResource("3_wdwpm")
text = "next to my large collection of throwable objects"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 5.5
duration = 0.0

[sub_resource type="Resource" id="Resource_npr8r"]
script = ExtResource("3_wdwpm")
text = "and also empty notebooks it would sure suck"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 8.4
duration = 0.0

[sub_resource type="Resource" id="Resource_mo8ok"]
script = ExtResource("3_wdwpm")
text = "if someone named Carol Thomas showed up"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 11.8
duration = 0.0

[sub_resource type="Resource" id="Resource_p1y83"]
script = ExtResource("3_wdwpm")
text = "to ruin all my fun."
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 14.0
duration = 0.0

[sub_resource type="Resource" id="Resource_pc5ud"]
script = ExtResource("3_wdwpm")
text = "Carol Thomas, Carol Thomas, Carol Thomas"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 15.0
duration = 0.0

[sub_resource type="Resource" id="Resource_e75l0"]
script = ExtResource("3_wdwpm")
text = "clicking stops"
position = 2
speaker_name = ""
speaker_color = 0
speaker_format = 0
extra_formatting = ""
delay = 17.2
duration = 0.0

[sub_resource type="Resource" id="Resource_8cm81"]
script = ExtResource("3_wdwpm")
text = "Hey, I've been here for half an hour"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = "into radio"
delay = 18.5
duration = 0.0

[sub_resource type="Resource" id="Resource_1bclt"]
script = ExtResource("3_wdwpm")
text = "can we please just call this a shade and go home?"
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 20.3
duration = 0.0

[sub_resource type="Resource" id="Resource_qyomo"]
script = ExtResource("3_wdwpm")
text = "We need at least one piece of evidence."
position = 3
speaker_name = "Jefferey"
speaker_color = 2
speaker_format = 1
extra_formatting = "over the radio"
delay = 21.87
duration = 0.0

[sub_resource type="Resource" id="Resource_mepef"]
script = ExtResource("3_wdwpm")
text = "Do we, tho? I feel like this evidence is pretty conclusive."
position = 3
speaker_name = "Kyle"
speaker_color = 1
speaker_format = 0
extra_formatting = ""
delay = 23.8
duration = 0.0

[sub_resource type="Resource" id="Resource_v6ia2"]
script = ExtResource("3_wdwpm")
text = "Let's go trough the cheklist."
position = 3
speaker_name = "Jefferey"
speaker_color = 2
speaker_format = 1
extra_formatting = "over the radio"
delay = 26.5
duration = 0.0

[sub_resource type="Resource" id="Resource_ghdwf"]
script = ExtResource("4_uskjc")
caption = SubResource("Resource_v6ia2")
select_caption = 14
_captions_array = Array[ExtResource("3_wdwpm")]([SubResource("Resource_wa64w"), SubResource("Resource_5fdjd"), SubResource("Resource_lndpt"), SubResource("Resource_1g0h8"), SubResource("Resource_4bnx5"), SubResource("Resource_npr8r"), SubResource("Resource_mo8ok"), SubResource("Resource_p1y83"), SubResource("Resource_pc5ud"), SubResource("Resource_e75l0"), SubResource("Resource_8cm81"), SubResource("Resource_1bclt"), SubResource("Resource_qyomo"), SubResource("Resource_mepef"), SubResource("Resource_v6ia2")])
audio_stream = ExtResource("2_aot4b")

[sub_resource type="Resource" id="Resource_wfx5i"]
script = ExtResource("3_wdwpm")
text = "This is a Test Caption."
position = 2
speaker_name = ""
speaker_color = 0
speaker_format = 0
extra_formatting = ""
delay = 0.0
duration = 0.0

[sub_resource type="Resource" id="Resource_jm85r"]
script = ExtResource("3_wdwpm")
text = "This is a second test caption."
position = 2
speaker_name = ""
speaker_color = 0
speaker_format = 0
extra_formatting = ""
delay = 0.0
duration = 0.0

[sub_resource type="Resource" id="Resource_6bihc"]
script = ExtResource("4_uskjc")
caption = SubResource("Resource_jm85r")
select_caption = 1
_captions_array = Array[ExtResource("3_wdwpm")]([SubResource("Resource_wfx5i"), SubResource("Resource_jm85r")])
audio_stream = ExtResource("2_aot4b")

[sub_resource type="ButtonGroup" id="ButtonGroup_m22g1"]

[sub_resource type="ButtonGroup" id="ButtonGroup_uuf7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c2gi"]
bg_color = Color(0.576471, 0.439216, 0.847059, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.69473, 0.599809, 0.915619, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5r0a"]
bg_color = Color(0.576471, 0.439216, 0.847059, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edq2t"]
bg_color = Color(0.347102, 0.218008, 0.564072, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.576471, 0.439216, 0.847059, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbcgr"]
bg_color = Color(0.933333, 0.509804, 0.933333, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.96057, 0.726965, 0.954891, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66wo5"]
bg_color = Color(0.933333, 0.509804, 0.933333, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1rue"]
bg_color = Color(0.691833, 0.21, 0.7, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.933333, 0.509804, 0.933333, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_722xw"]
bg_color = Color(0.980392, 0.501961, 0.447059, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.989679, 0.660379, 0.615236, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pxds"]
bg_color = Color(0.980392, 0.501961, 0.447059, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0c5c8"]
bg_color = Color(0.617655, 0.249618, 0.248671, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.980392, 0.501961, 0.447059, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_054n2"]
bg_color = Color(0.117647, 0.564706, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.464069, 0.711093, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofbuq"]
bg_color = Color(0.117647, 0.564706, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wcle"]
bg_color = Color(0, 0.335456, 0.630619, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.117647, 0.564706, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="CaptionPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euj1v")
multi_caption_stream = SubResource("Resource_ghdwf")

[node name="TimeScale" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -248.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = 22.0
grow_horizontal = 0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.1

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Navigation" type="HFlowContainer" parent="Layout"]
layout_mode = 2
alignment = 1

[node name="Last" type="Button" parent="Layout/Navigation"]
layout_mode = 2
tooltip_text = "skip to previous caption"
text = "|<"

[node name="DeleteCurrent" type="Button" parent="Layout/Navigation"]
layout_mode = 2
tooltip_text = "delete current caption"
text = "-"

[node name="Play" type="Button" parent="Layout/Navigation"]
layout_mode = 2
tooltip_text = "play"
toggle_mode = true
text = "||/>"

[node name="Add" type="Button" parent="Layout/Navigation"]
layout_mode = 2
tooltip_text = "add new caption"
text = "+"

[node name="Next" type="Button" parent="Layout/Navigation"]
layout_mode = 2
tooltip_text = "skip to next caption"
text = ">|"

[node name="Timeline" type="VBoxContainer" parent="Layout"]
layout_mode = 2
script = ExtResource("5_re1ab")
multi_caption_stream = SubResource("Resource_6bihc")

[node name="TimeLabels" type="HBoxContainer" parent="Layout/Timeline"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Layout/Timeline/TimeLabels"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Control" type="Control" parent="Layout/Timeline/TimeLabels"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/Timeline/TimeLabels/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="VSeparator2" type="HSeparator" parent="Layout/Timeline/TimeLabels"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeSelector" type="HSlider" parent="Layout/Timeline"]
layout_mode = 2
allow_greater = true
allow_lesser = true
tick_count = 10

[node name="Waveform" type="TextureRect" parent="Layout/Timeline"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="Layout/Timeline"]
layout_mode = 2

[node name="line_1" type="HBoxContainer" parent="Layout/Timeline/Buttons"]
layout_mode = 2

[node name="VSeparator" type="HSeparator" parent="Layout/Timeline/Buttons/line_1"]
custom_minimum_size = Vector2(42.145, 0)
layout_mode = 2

[node name="Button" type="Button" parent="Layout/Timeline/Buttons/line_1"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VSeparator3" type="HSeparator" parent="Layout/Timeline/Buttons/line_1"]
custom_minimum_size = Vector2(42.145, 0)
layout_mode = 2

[node name="Button2" type="Button" parent="Layout/Timeline/Buttons/line_1"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="VSeparator2" type="HSeparator" parent="Layout/Timeline/Buttons/line_1"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Speaker_properties" type="GridContainer" parent="Layout/HBoxContainer3"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2
text = "Name"

[node name="HSplitContainer" type="HSplitContainer" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2

[node name="NameInput" type="TextEdit" parent="Layout/HBoxContainer3/Speaker_properties/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Godette"
scroll_fit_content_height = true

[node name="NamePicker" type="OptionButton" parent="Layout/HBoxContainer3/Speaker_properties/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 127
popup/item_1/id = 1
popup/item_2/id = 2
popup/item_3/id = 3
popup/item_4/id = 4
popup/item_5/id = 5
popup/item_6/id = 6
popup/item_7/id = 7
popup/item_8/id = 8
popup/item_9/id = 9
popup/item_10/id = 10
popup/item_11/id = 11
popup/item_12/id = 12
popup/item_13/id = 13
popup/item_14/id = 14
popup/item_15/id = 15
popup/item_16/id = 16
popup/item_17/id = 17
popup/item_18/id = 18
popup/item_19/id = 19
popup/item_20/id = 20
popup/item_21/id = 21
popup/item_22/id = 22
popup/item_23/id = 23
popup/item_24/id = 24
popup/item_25/id = 25
popup/item_26/id = 26
popup/item_27/id = 27
popup/item_28/id = 28
popup/item_29/id = 29
popup/item_30/id = 30
popup/item_31/id = 31
popup/item_32/id = 32
popup/item_33/id = 33
popup/item_34/id = 34
popup/item_35/id = 35
popup/item_36/id = 36
popup/item_37/id = 37
popup/item_38/id = 38
popup/item_39/id = 39
popup/item_40/id = 40
popup/item_41/id = 41
popup/item_42/id = 42
popup/item_43/id = 43
popup/item_44/id = 44
popup/item_45/id = 45
popup/item_46/id = 46
popup/item_47/id = 47
popup/item_48/id = 48
popup/item_49/id = 49
popup/item_50/id = 50
popup/item_51/id = 51
popup/item_52/id = 52
popup/item_53/id = 53
popup/item_54/id = 54
popup/item_55/id = 55
popup/item_56/id = 56
popup/item_57/id = 57
popup/item_58/id = 58
popup/item_59/id = 59
popup/item_60/id = 60
popup/item_61/id = 61
popup/item_62/id = 62
popup/item_63/id = 63
popup/item_64/id = 64
popup/item_65/id = 65
popup/item_66/id = 66
popup/item_67/id = 67
popup/item_68/id = 68
popup/item_69/id = 69
popup/item_70/id = 70
popup/item_71/id = 71
popup/item_72/id = 72
popup/item_73/id = 73
popup/item_74/id = 74
popup/item_75/id = 75
popup/item_76/id = 76
popup/item_77/id = 77
popup/item_78/id = 78
popup/item_79/id = 79
popup/item_80/id = 80
popup/item_81/id = 81
popup/item_82/id = 82
popup/item_83/id = 83
popup/item_84/id = 84
popup/item_85/id = 85
popup/item_86/id = 86
popup/item_87/id = 87
popup/item_88/id = 88
popup/item_89/id = 89
popup/item_90/id = 90
popup/item_91/id = 91
popup/item_92/id = 92
popup/item_93/id = 93
popup/item_94/id = 94
popup/item_95/id = 95
popup/item_96/id = 96
popup/item_97/id = 97
popup/item_98/id = 98
popup/item_99/id = 99
popup/item_100/id = 100
popup/item_101/id = 101
popup/item_102/id = 102
popup/item_103/id = 103
popup/item_104/id = 104
popup/item_105/id = 105
popup/item_106/id = 106
popup/item_107/id = 107
popup/item_108/id = 108
popup/item_109/id = 109
popup/item_110/id = 110
popup/item_111/id = 111
popup/item_112/id = 112
popup/item_113/id = 113
popup/item_114/id = 114
popup/item_115/id = 115
popup/item_116/id = 116
popup/item_117/id = 117
popup/item_118/id = 118
popup/item_119/id = 119
popup/item_120/id = 120
popup/item_121/id = 121
popup/item_122/id = 122
popup/item_123/id = 123
popup/item_124/id = 124
popup/item_125/id = 125
popup/item_126/id = 126

[node name="PositionLabel" type="Label" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2
text = "Position"

[node name="Position" type="HBoxContainer" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2

[node name="offLeft" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Position"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_m22g1")
text = "<<"

[node name="left" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Position"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_m22g1")
text = "<"

[node name="center" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Position"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_m22g1")
text = "center"

[node name="right" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Position"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_m22g1")
text = ">"

[node name="offRight" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Position"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_m22g1")
text = ">>"

[node name="behind" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Position"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_m22g1")
text = "behind"

[node name="ColorLabel" type="Label" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2
text = "Color"

[node name="Color" type="HBoxContainer" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2

[node name="auto" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "automatically determine speaker colors based on game context. First ovurring speaker will be white, second yellow and so on."
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_uuf7x")
text = "AUTO"

[node name="white" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Color of the "
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")
text = "white"

[node name="yellow" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_color = Color(1, 1, 0, 1)
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")
text = "yellow"

[node name="cyan" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_pressed_color = Color(0, 1, 1, 1)
theme_override_colors/font_color = Color(0, 1, 1, 1)
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")
text = "cyan"

[node name="green" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0, 1, 0, 1)
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")
text = "green"

[node name="extra_colors" type="GridContainer" parent="Layout/HBoxContainer3/Speaker_properties/Color"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
columns = 2

[node name="mediumpurple" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color/extra_colors"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "extra colors"
theme_override_styles/hover = SubResource("StyleBoxFlat_4c2gi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5r0a")
theme_override_styles/normal = SubResource("StyleBoxFlat_edq2t")
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")

[node name="violet" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color/extra_colors"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "extra colors"
theme_override_styles/hover = SubResource("StyleBoxFlat_kbcgr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66wo5")
theme_override_styles/normal = SubResource("StyleBoxFlat_j1rue")
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")

[node name="salmon" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color/extra_colors"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "extra colors"
theme_override_styles/hover = SubResource("StyleBoxFlat_722xw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5pxds")
theme_override_styles/normal = SubResource("StyleBoxFlat_0c5c8")
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")

[node name="blue" type="Button" parent="Layout/HBoxContainer3/Speaker_properties/Color/extra_colors"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "extra colors"
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_054n2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ofbuq")
theme_override_styles/normal = SubResource("StyleBoxFlat_4wcle")
toggle_mode = true
button_group = SubResource("ButtonGroup_uuf7x")

[node name="ExtraLabel" type="Label" parent="Layout/HBoxContainer3/Speaker_properties"]
layout_mode = 2
text = "Extras"

[node name="extra_input" type="TextEdit" parent="Layout/HBoxContainer3/Speaker_properties"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "over the radio"
scroll_fit_content_height = true

[node name="CaptionInput" type="TextEdit" parent="Layout/HBoxContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "This is a second test caption."
placeholder_text = "Caption Text"
wrap_mode = 1

[node name="Scroll" type="ScrollContainer" parent="Layout/HBoxContainer3"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CaptionList" type="VBoxContainer" parent="Layout/HBoxContainer3/Scroll"]
layout_mode = 2

[node name="Button" type="Button" parent="Layout/HBoxContainer3/Scroll/CaptionList"]
layout_mode = 2
text = "1:00 some very long caption that needs to be cutoff"

[node name="Button2" type="Button" parent="Layout/HBoxContainer3/Scroll/CaptionList"]
layout_mode = 2
text = "1:00 some very long caption that needs to be cutoff"

[node name="Button3" type="Button" parent="Layout/HBoxContainer3/Scroll/CaptionList"]
layout_mode = 2
text = "1:00 some very long caption that needs to be cutoff"

[node name="Button4" type="Button" parent="Layout/HBoxContainer3/Scroll/CaptionList"]
layout_mode = 2
text = "1:00 some very long caption that needs to be cutoff"

[node name="Button5" type="Button" parent="Layout/HBoxContainer3/Scroll/CaptionList"]
layout_mode = 2
text = "1:00 some very long caption that needs to be cutoff"

[node name="Button6" type="Button" parent="Layout/HBoxContainer3/Scroll/CaptionList"]
layout_mode = 2
text = "1:00 some very long caption that needs to be cutoff"

[node name="Label" type="Label" parent="Layout"]
layout_mode = 2
text = "Preview"
horizontal_alignment = 1

[node name="CaptionLabel" type="RichTextLabel" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_rptbq")
bbcode_enabled = true
text = "[right]  [color=yellow][over the radio] 
 'Let's go trough the cheklist.' [/color] [/right]"
fit_content = true
autowrap_mode = 0
script = ExtResource("2_7ifoh")
caption = SubResource("Resource_v6ia2")
include_name = false
